<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="divide">\u00F7</string>
    <string name="percent">%</string>
    <string name="equal">=</string>
    <string name="subtract">-</string>
    <string name="clear">C</string>
    <string name="plus">+</string>
    <string name="multiply">\u00D7</string>
    <string name="sqrt">\u221A</string>
    <string name="six">6</string>
    <string name="decimal">.</string>
    <string name="three">3</string>
    <string name="nine">9</string>
    <string name="five">5</string>
    <string name="zero">0</string>
    <string name="two">2</string>
    <string name="eight">8</string>
    <string name="posNeg">\u00B1</string>
    <string name="one">1</string>
    <string name="four">4</string>
    <string name="seven">7</string>
</resources>
